<resources xmlns:app="http://schemas.android.com/apk/res-auto">
    <string name="app_name">dr Ventryca</string>
    <string name="starter_text">Imunitas tubuh kita dibentuk di pencernaan, yang terus membedakan mana bakteri baik dan buruk untuk kesehatan tubuh secara umum.</string>
    <string name="app_desc">Aplikasi ini bernama dr Ventryca, aplikasi ini dibuat untuk membantu pengguna untuk mendiagnosis masalah pencernaan juga dengan fitur lainnya yang membantu pengguna untuk menjalani hidup lebih sehat. Dibuat untuk memenuhi tugas besar matakuliah PAB dan PAIM.
    </string>
    <string name="app_desc2"><b>DIAGNOSIS</b>\nIdentifikasi penyakit pencernaan dengan cara mencocokkan gejala yang ada dan dirasakan pengguna dan akan muncul penyakit yang diduga kuat diderita. \n \n<b>DATA PENYAKIT</b>
        \nTerdapat data penyakit yang berhubungan dengan pencernaan definisi, deskripsi, cara mengobati, saran penyembuhan dan lain-lain.\n \n<b>FAKTA &amp; TIPS</b>
        \nBerisi tentang fakta &amp; tips untuk menjaga kesehatan badan melalui makanan dan kebiaasan yang mendukung fitalitas dan imunitas tubuh.
    </string>
    <string name="link_sumber">
        http://repository.uinjkt.ac.id/dspace/handle/123456789/15363
    </string>
    <string name="bio_ihya">
        Ihya Fathurrahman \n(17523126) \n
        Informatika UII 2017 \n
    </string>
    <string name="bio_arif">
        Muhammad Arif Idris (17523127)\n
        Informatika UII 2017\n

    </string>
    <string name="bio_toni">
        Hirzin Fathoni\n
        (17523128)\n
        Informatika UII 2017\n

    </string>
    <string name="bio_raffi">
        Muhammad Raffi Akhyari (17523207)\n
        Informatika UII 2017\n

    </string>
    <string name="card_text3"><![CDATA[Fakta & Tips Kesehatan]]></string>
    <string name="ready_diagnosis">
        Anda akan melakukan serangkaian test dengan menjawab beberapa pertanyaan
        mengenai gejala-gejala yang anda rasakan untuk mengetahui penyakit yang diderita
    </string>
    <string name="contoh_explain"><b>Penjelasan</b>\n
        Esofagitis adalah peradangan esophagus. Tekanan esophagus minimal 3mmHg. Jika kurang, makan akan terjadi refluk. Refluk ini akan mempengaruhi kepakaan selaput lender esophagus terhadap bahan refluk. Akibat rangsangan dari hasil refluk terhadap selaput lender esophagus ini dapat menimbulkan peradangan dan menimbulkan esophagitis. Perlu dilakukan tes Berntein dan esofagoskopi untuk menegakkan diagnosa.\n\n
        <b>Pengobatan</b>\n
        Untuk pengobatan awal, makanlah dengan jumlah sedikit tetapi sering dan tidak makan lagi 2-3 jam sebelum tidur. Saat tidur, posisi kepala ditinggikan sekitar 60 cm agar tekanan dalam lambung tidak meningkat. Kurangi pekerjaan yang perlu mengangkat beban yang berat untuk mengurangi tekanaan dalam lambung. Segeralah berobat ke dokter untuk penanganan lebih lanjut, karena mencegah lebih baik daripada mengobati.
    </string>
    <string name="kurus"><![CDATA[<18.5]]></string>
    <string-array name="goldar">
        <item>Golongan Darah</item>
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>
    <string-array name="fakta_tips">
        <item>Solusi nutrisi dari percernaan yang terbaik ada dua yaitu prebiotik dan probiotik</item>
        <item>Mengobati suatu penyakit paling tepat adalah dengan menghentikan apa yang menyebabkan timbulnya penyakit tersebut, biasanya adalah dari kebiasaan</item>
        <item>Air kelapa mengandung asam amino yang tinggi dan sifat mineral didalamnya nano maka air kelapa sangatlah steril dan isotonik dengan tubuh manusia.</item>
        <item>Ibu hamil sangat bagus dan butuh nutrisi yang diperlukan janinnya seperti asam folat, asam amino &amp; zat besi. Maka mengkonsumsi 1 sendok madu, 1 sendok zaitun dan 7 butir kurma setiap harinya selama masa kehamilan nutrisi-nutrisi tersebut akan terpenuhi.</item>
        <item>Detoksifikasi tubuh dapat dilakukan dengan mengkonsumi air nano/air alkali/infused water, dan salah satunya adalah air kelapa terutama air kelapa muda</item>
        <item>Daun pandan dapat memberikan efek sedatif (penenang) pada tubuh ketika dikonsumi</item>
        <item>Tubuh yang kelebihan berat badan adalah dikarenakan banyaknya lemak yang tertimbun</item>
        <item>Lemak yang tertimbun akibat dari pada glukosa yang tidak terpakai yang berubah menjadi glikogen dan akhirnya menjadi lemak</item>
        <item>Nasi, tepung, gula adalah contoh glukosa yang mana zaman sekarang sering dan banyak dikomsumsi</item>
        <item>Sangat tidak disarankan memakan makanan yang berasal dari GMO atau  Genetically Modified Organism karena dapat mempengaruhi gen, dan pengaruh tersebut sangat buruk</item>
        <item>80% ekspresi gen kita dalam tiga bulan dapat diubah dengan makan makanan berbasis buah dan sayur</item>
        <item>Menghindari maag dapat dilakukan salah satunya dengan cara  mengunyah makanan dengan perlahan </item>
        <item>Hindari menggunakan antibiotik selain karena urgent, karena antibiotik dapat menguras enzim yang ada dalam percernaan</item>
        <item>Perbanyak mengkonsumsi makanan yang mengandung prebiotik seperti tempe</item>
        <item>Lapar adalah elemen pertama dalam kedisiplinan, apabila bisa mengendalikan lapar akan mudah mengendalikan yang lain</item>
        <item>Tubuh manusia pada dasarnya tidak didesain untuk mengolah makanan sintesis</item>
        <item>Daun kelor mengandung asam amino, mufa/lemak dan selenium. Asam amino dapat memperbaiki gen, selenium dapat mencegah kankerdan lemaknya sama seperti lemak zaitun</item>
        <item>Lemak dari pada kegemukan dapat mempengaruhi/mengganggu metabolisme hormon</item>
        <item>Mulailah melakukan aktifitas yang membuat badan bergerak dan berkeringat</item>
        <item>Makanan yang dibekukan apabila langsung dimasak sangat tidak baik karena saat itu akan terjadi perubahan molekul dari dingin ke panas</item>
        <item>Laki-laki tidak boleh mengkonsumsi kedelai terlalu banyak karena dapat mempengaruhi hormonnya (menambah hormon estrogen dibanding testosteron)</item>
        <item>Sebaiknya menghindari mengolah makanan yang memiliki protein dengan cara digoreng karena protein akan rusak dengan pemanasan</item>
        <item>Seimbangkan keadaan asam dan basa dalam tubuh, tubuh yang terlalu asam akan menyebabkan timbul penyakit-penyakit</item>
        <item>Cara menyeimbangkan asam/basa dalam tubuh dapat dengan cara mengkonsumsi buah dan sayuran</item>
        <item>Mengkonsumsi buah dan sayur dapat menjadi investasi di masa depan untuk menghindari kanker </item>
        <item>Kanker mudah berkembang dalam linkungan yang asam dan tidak suka lingkungan yang basa</item>
        <item>Buah pisang ditambah sedikit bawang putih dan sedikit madu lalu diblender dan dikonsumsi akan sangat baik untuk enzim pencernaan</item>
        <item>Waktu makan terbaik adalah saat terbit matahari sampai tenggelammnya matahari, maka penuhi kebutuhan asupan sebelum menjelang malam</item>
        <item>Hindari makan pada waktu malam hari terutama mengkonsumsi makanan berat seperti yang mengandung karbohidarat</item>
        <item>Durasi tidur minimal dalam satu hari yang paling baik adalah 8 jam</item>
    </string-array>
</resources>